--- a/styles.css
+++ b/styles.css
@@ -52,15 +52,21 @@ nav li:active:first-child{
 .footer{
     display: flex;
     background-color: #D1BB91;
-    align-items: flex-end;
     margin-top: 100%;
+    justify-content: right;
+    align-items: center;
+}
+.footer h2{
+    display: flex;
 }
 .footer li{
     display: inline-flex;
-    justify-content: space-around;
+    margin-right: 30px;
+}
+.footer li:last-child{
+    margin-right: 10px;
 }
 .footer_img{
-    justify-content: flex-end;
     width: 50px;
     height: 50px;
     border: 2px solid #C8AD7E;
