--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ nav li{
     margin-left: 60px;
     color: #000000;
 }
+/* Nav psudo  */
 nav li:first-child{
     margin-left: 0px;
 }
@@ -37,9 +38,6 @@ nav li:active:first-child{
 .welcome-txt{
     color:black;
     text-align: center; 
-    font:italic;
-    display:flexbox;
-    justify-content: center;
 }
 .welcome-H1{
     margin-top: 150px;
@@ -47,7 +45,14 @@ nav li:active:first-child{
 .my-img{
     border: 10px solid #C8AD7E;
    border-radius: 600px;
+   margin-bottom: 100px;
 }
+/* about me section   */
+.about-me{
+    background-color: #f7ead4;
+    display: inline-block;
+    text-align: center;
+}   
 /* footer */
 .footer{
     display: flex;
@@ -69,6 +74,13 @@ nav li:active:first-child{
 .footer_img{
     width: 50px;
     height: 50px;
-    border: 2px solid #C8AD7E;
+    border: 3px solid #C8AD7E;
     border-radius: 300px;
+}
+/* footer psudo  */
+.footer_img:hover{
+    border: 4px solid #d5a450;
+}
+.footer_img:active{
+    border: 5px solid #c98000;
 }
