--- a/styles.css
+++ b/styles.css
@@ -3,64 +3,79 @@
     box-sizing: border-box;
 }
 .background{
-    background-color: bisque;
+    background-color: #000000 ;
 }
 /* nav bar */
 nav{
-background-color: #C8AD7E;
+background-color: #BB1D24;
 border-radius: 5px;
 justify-content: flex-start;
 display: flex;
 }
 nav li{
     display: inline-flex;
+    
     margin-left: 60px;
     color: #000000;
+    border: 2px;
+    border: 2px #ff6060 solid;
+    padding: 6px;
+    border-radius: 6px;
 }
 /* Nav psudo  */
 nav li:first-child{
     margin-left: 0px;
+    border: 0px;
+    background-color: #BB1D24;
+
 }
 nav li:hover{
-    color: #F5F5DD;
+    color: #F5F5F1;
+    font-size: large;
+    background-color: #ff6060;
 }
 nav li:hover:first-child{
     color: #000000;
+    border: 2px;
+    font-size: initial;
 }
 
 nav li:active{
-    color:#DACAA4;
+    color:#ffa5a5;
+    border: 4px;
 }
 nav li:active:first-child{
     color: #000000;
+    border: 2px;
 }
 /* welcome text and image  */
 .welcome-txt{
-    color:black;
+    color:#F5F5F1;
     text-align: center; 
 }
 .welcome-H1{
     margin-top: 150px;
 }
 .my-img{
-    border: 10px solid #C8AD7E;
+    border: 10px solid #BB1D24;
    border-radius: 600px;
    margin-bottom: 100px;
 }
 /* about me section   */
 .about-me{
-    background-color:#f7EAD4;
-    /* display:inline-block; */
-    display:flex;
+    background-color:#BB1D24;
+    display: flex;
     flex-direction: column;
     text-align:center;
-    padding: 30px;
+    padding: 60px;
+    margin: 0px 200px 0px 200px;
+    border-radius: 30px;
+    color: #F5F5F1;
 }   
-
 /* footer */
 .footer{
     display: flex;
-    background-color: #D1BB91;
+    background-color: #BB1D24;
     margin-top: 100%;
     justify-content: right;
     align-items: center;
@@ -78,13 +93,13 @@ nav li:active:first-child{
 .footer_img{
     width: 50px;
     height: 50px;
-    border: 3px solid #C8AD7E;
+    border: 3px solid #BB1D24;
     border-radius: 300px;
 }
 /* footer psudo  */
 .footer_img:hover{
-    border: 4px solid #D5A450;
+    border: 4px;
 }
 .footer_img:active{
-    border: 5px solid #C98000;
+    border: 6px;
 }
