--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -15,6 +15,22 @@
     border: 5px black solid;
     border-radius: 20px;
 }
+.title a{
+    text-decoration: none;
+    color: black;
+    border: 2px black solid;
+    background-color: beige;
+    border-radius: 4px;
+    padding: 5px;
+    margin-bottom: 5px;
+}
+.title a:hover{
+    padding: 8px;
+    background-color: khaki;
+}
+.title a:active{
+    background-color: #F06D06;
+}
 /* start of calculator */
   .display{
     grid-area: display;
