--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -71,6 +71,22 @@
     .numbers:active{
     background-color: whitesmoke;
   }
+  .end{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+    #picture_of_cute_dog img{
+      margin-top: 10px;
+      width: 100px;
+      height: 100px;
+      border: 5px solid khaki;
+      border-radius: 30px;
+    }
+
+
 /* I have this at the end since it looks ugly but a must  */
   .zero{
     grid-area: zer;
@@ -124,7 +140,7 @@
     grid-area: nine;
   }
   .calculator-layout{
-    display: grid;
+    display:grid;
     grid-template-areas:
       "display display   display   display"
       "clear   clear     backspace divide"
